tests/invalid/invalid-004.inox
Module Invalid004

Main() :
    PutLn(Length(123))
;
